# visuo_llm

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
examples/: get_dnn_activities.py  get_dnn_activities_hebart.py  get_embeddings.py  llm_decoding_model.py  llm_encoding_model.py  plot_searchlight_brain_maps.m  plot_searchlight_brain_maps_bihem.m  roi_analyses.py  roi_analyses_bihemnets.py  searchlight_analyses.py  searchlight_analyses_varPartitionning.py  sush_analyses.py
licenses/: BSD-3  MIT
src/nsd_visuo_semantics/: kietzmannlab.yaml
src/nsd_visuo_semantics/decoding_analyses/: __init__.py  cluster_tools.py  decoding_extra_analyses.py  decoding_utils.py  get_max_sentences_per_cluster.py  interpolate_project_embeddings.py  make_gcc_h5.py  make_noise_ceiling.py  make_subj_embeddings_and_cocoIDs.py  makegif_interpolate_project_embeddings.py  multisubj_histogram.py  nsd_encoding_models.py  nsd_encoding_models_voxelWisePredictors.py  nsd_predict_embeddings.py  plot_brains_encodingModel.m  plot_interpolate_projected_embed.m  plot_projected_embed.m  project_embeddings.py
src/nsd_visuo_semantics/encoding_decoding_analyses/: __init__.py  decoding_extra_analyses.py  encoding_decoding_utils.py  make_noise_ceiling.py  multisubj_histogram.py  nsd_decode_llm.py  nsd_llm_encoding_model.py  plot_single_brain.m  project_embeddings.py  text_to_brain_prediction.py
src/nsd_visuo_semantics/get_dnn_activities/: __init__.py  ecoset_class_names.pickle  get_modelName2Path_dict.py  get_nsd_activations.py  get_nsd_activations_LLMnets.py  ipcl_feature_extractor.py  run_example_hdf5.py  task_helper_functions.py  trainingImgs_vs_brainMatch_scatter.py  transfer_perf_plot.py  transfer_perf_plot_scenes.py  transfer_readout.py
src/nsd_visuo_semantics/get_embeddings/: __init__.py  add_category_embeddings_to_coco.py  add_embedding_to_h5.py  add_fasttext_to_h5.py  correlate_model_rdms_figure.py  embedding_models_zoo.py  get_nsd_allWord_embeddings.py  get_nsd_allWord_embeddings_simple.py  get_nsd_category_embeddings.py  get_nsd_category_embeddings_simple.py  get_nsd_multihot.py  (+16 more)
(+40 files in other folders)
