[metadata]
name = nsd_visuo_semantics

description = Code to reproduce results from Doerig et al. "Semantic scene descriptions as an objective of the human visual system"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KietzmannLab/nsd_visuo_semantics
author = Adrien Doerig
author_email = adrien.doerig@uni-osnabrueck.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/KietzmannLab/nsd_visuo_semantics/issues
    Documentation = https://github.com/KietzmannLab/nsd_visuo_semantics#README.md
    Source Code = https://github.com/KietzmannLab/nsd_visuo_semantics
    User Support = https://github.com/KietzmannLab/nsd_visuo_semantics/issues

[options]
packages = find:
install_requires =
    numpy
    tensorflow==2.15
    nltk
    scipy
    fracridge
    nibabel
    tensorflow_probability
    sentence_transformers
    tensorflow_hub
    statsmodels
    boto3
    pycocotools
    nsdcode@git+https://github.com/cvnlab/nsdcode.git
    # nsd_access@git+https://github.com/tknapen/nsd_access.git # * problem for skilearn

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
kietzmannlab.manifest =
    nsd_visuo_semantics = nsd_visuo_semantics:kietzmannlab.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
